@@ -8,6 +8,11 @@ not yet  BJH  Release 10.87.00
 
               pamfind: Add -machine .
 
+              Multiple: fix bug: when you specify the same option twice, you
+              can get a syntax error, with the message telling you you
+              specified some other option that conflicts with it.  Should just
+              take the last setting.
+
               pnmtopng: Fix bug: Defaults to no filters.  Should be all
               filters.  Effect is larger PNG output.  Broken after Netpbm
               10.26 (January 2005) but no later than Netpbm 10.35 (August
